# Signer

./: CMakeLists.txt  README.md  command.cpp  command.h  main.cpp  signer.h  test.h  util.h
command/: command.cpp  command.h
crypto/: ed25519.cpp  ed25519.h  fpga.cpp  fpga.h  secp256k1.cpp  secp256k1.h  signer.cpp  signer.h
util/: base32.cpp  base32.h  crc16.cpp  crc16.h  stella_format.cpp  stella_format.h  util.h
